@@ -1,8 +1,7 @@
 package com.ryuqq.fileflow.adapter.out.persistence.mysql.file.adapter;
 
-import com.ryuqq.fileflow.adapter.out.persistence.mysql.file.entity.FileAssetJpaEntity;
 import com.ryuqq.fileflow.adapter.out.persistence.mysql.file.mapper.FileAssetEntityMapper;
-import com.ryuqq.fileflow.adapter.out.persistence.mysql.file.repository.FileAssetJpaRepository;
+import com.ryuqq.fileflow.adapter.out.persistence.mysql.file.repository.FileQueryDslRepository;
 import com.ryuqq.fileflow.application.file.dto.query.FileMetadataQuery;
 import com.ryuqq.fileflow.application.file.dto.query.ListFilesQuery;
 import com.ryuqq.fileflow.application.file.port.out.FileQueryPort;
@@ -11,33 +10,28 @@ import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * FileQueryPort Adapter (CQRS Query Side)
  *
- * <p>Application Layer의 FileQueryPort를 구현하는 Persistence Adapter</p>
+ * <p>CQRS 패턴의 Query 전용 Adapter입니다.
+ * FileQueryDslRepository를 통해 성능 최적화된 조회 쿼리를 실행합니다.</p>
  *
  * <p><strong>책임</strong>:</p>
  * <ul>
- *   <li>FileQueryPort 인터페이스 구현</li>
- *   <li>JPA Repository 호출 및 Domain 변환</li>
- *   <li>QueryDSL 기반 동적 쿼리 조립</li>
+ *   <li>FileAsset 조회 작업만 담당 (CUD 작업 없음)</li>
+ *   <li>Repository 계층에 조회 요청 위임</li>
+ *   <li>JPA Entity를 Domain Entity로 변환</li>
  * </ul>
  *
- * <p><strong>성능 최적화</strong>:</p>
+ * <p><strong>설계 원칙</strong>:</p>
  * <ul>
- *   <li>❌ Persistence Adapter에서 @Transactional 사용 금지</li>
- *   <li>✅ Application Layer (UseCase)에서 @Transactional(readOnly = true) 관리</li>
- *   <li>인덱스 활용: idx_tenant_org_uploaded, idx_owner, idx_status</li>
- *   <li>QueryDSL 동적 쿼리: 다중 필터 조합 지원</li>
- *   <li>DB 레벨 페이징: offset/limit (Stream skip/limit 대체)</li>
- * </ul>
- *
- * <p><strong>향후 개선 사항</strong>:</p>
- * <ul>
- *   <li>DTO 프로젝션: 필요한 필드만 SELECT</li>
- *   <li>페이징 최적화: Cursor 기반 페이징</li>
+ *   <li>✅ {@code @Component} 사용 (Spring Bean 등록)</li>
+ *   <li>✅ {@code FileQueryPort} 구현</li>
+ *   <li>✅ Repository에 조회 로직 위임</li>
+ *   <li>✅ Mapper를 통한 Entity 변환</li>
+ *   <li>✅ Pure Java (Lombok 금지)</li>
+ *   <li>❌ {@code @Transactional} 사용 금지 (Application Layer에서만)</li>
  * </ul>
  *
  * @author Sangwon Ryu
@@ -46,17 +40,17 @@ import java.util.stream.Collectors;
 @Component
 public class FileQueryAdapter implements FileQueryPort {
 
-    private final FileAssetJpaRepository fileAssetRepository;
+    private final FileQueryDslRepository repository;
 
     /**
-     * 생성자
+     * Constructor - 의존성 주입
      *
-     * @param fileAssetRepository JPA Repository
+     * @param repository FileQueryDslRepository
+     * @author Sangwon Ryu
+     * @since 1.0.0
      */
-    public FileQueryAdapter(
-        FileAssetJpaRepository fileAssetRepository
-    ) {
-        this.fileAssetRepository = fileAssetRepository;
+    public FileQueryAdapter(FileQueryDslRepository repository) {
+        this.repository = repository;
     }
 
     /**
@@ -72,35 +66,13 @@ public class FileQueryAdapter implements FileQueryPort {
      *
      * @param query 파일 메타데이터 조회 Query
      * @return FileAsset (Optional)
+     * @author Sangwon Ryu
+     * @since 1.0.0
      */
     @Override
     public Optional<FileAsset> findByQuery(FileMetadataQuery query) {
-        if (query == null) {
-            return Optional.empty();
-        }
-
-        Long fileId = query.fileId().value();
-        Long tenantId = query.tenantId().value();
-        Long organizationId = query.organizationId();
-
-        Optional<FileAssetJpaEntity> entityOpt;
-
-        if (organizationId != null) {
-            // Organization 스코프 포함 조회
-            entityOpt = fileAssetRepository.findByIdAndTenantIdAndOrganizationId(
-                fileId,
-                tenantId,
-                organizationId
-            );
-        } else {
-            // Tenant 스코프만 조회
-            entityOpt = fileAssetRepository.findByIdAndTenantId(
-                fileId,
-                tenantId
-            );
-        }
-
-        return entityOpt.map(FileAssetEntityMapper::toDomain);
+        return repository.findByQuery(query)
+            .map(FileAssetEntityMapper::toDomain);
     }
 
     /**
@@ -118,24 +90,16 @@ public class FileQueryAdapter implements FileQueryPort {
      *
      * <p><strong>정렬</strong>: uploaded_at DESC (최근 업로드 순)</p>
      *
-     * <p><strong>QueryDSL 동적 쿼리</strong>: 다중 필터 조합 지원</p>
-     *
      * @param query 파일 목록 조회 Query
      * @return FileAsset 목록
+     * @author Sangwon Ryu
+     * @since 1.0.0
      */
     @Override
     public List<FileAsset> findAllByQuery(ListFilesQuery query) {
-        if (query == null) {
-            return List.of();
-        }
-
-        // QueryDSL 동적 쿼리 실행
-        List<FileAssetJpaEntity> entities = fileAssetRepository.searchWithFilters(query);
-
-        // Entity → Domain 변환
-        return entities.stream()
+        return repository.findAllByQuery(query).stream()
             .map(FileAssetEntityMapper::toDomain)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     /**
@@ -143,19 +107,14 @@ public class FileQueryAdapter implements FileQueryPort {
      *
      * <p>페이징 처리를 위한 전체 개수 조회</p>
      *
-     * <p><strong>QueryDSL 동적 COUNT 쿼리</strong>: findAllByQuery()와 동일한 필터 적용</p>
-     *
      * @param query 파일 목록 조회 Query
      * @return 전체 개수
+     * @author Sangwon Ryu
+     * @since 1.0.0
      */
     @Override
     public long countByQuery(ListFilesQuery query) {
-        if (query == null) {
-            return 0;
-        }
-
-        // QueryDSL 동적 COUNT 쿼리 실행
-        return fileAssetRepository.countWithFilters(query);
+        return repository.countByQuery(query);
     }
 
     /**
@@ -170,14 +129,12 @@ public class FileQueryAdapter implements FileQueryPort {
      *
      * @param id FileAsset ID
      * @return FileAsset (Optional)
+     * @author Sangwon Ryu
+     * @since 1.0.0
      */
     @Override
     public Optional<FileAsset> findById(Long id) {
-        if (id == null) {
-            return Optional.empty();
-        }
-
-        return fileAssetRepository.findById(id)
+        return repository.findById(id)
             .map(FileAssetEntityMapper::toDomain);
     }
 
@@ -186,14 +143,12 @@ public class FileQueryAdapter implements FileQueryPort {
      *
      * @param uploadSessionId Upload Session ID
      * @return FileAsset (Optional)
+     * @author Sangwon Ryu
+     * @since 1.0.0
      */
     @Override
     public Optional<FileAsset> findByUploadSessionId(Long uploadSessionId) {
-        if (uploadSessionId == null) {
-            return Optional.empty();
-        }
-
-        return fileAssetRepository.findByUploadSessionId(uploadSessionId)
+        return repository.findByUploadSessionId(uploadSessionId)
             .map(FileAssetEntityMapper::toDomain);
     }
 }
